force-app/main/default/objects/SiegeCombat__c/SiegeCombat__c.object-meta.xml
<CustomObject>
    <label>SiegeCombat</label>
    <pluralLabel>SiegeCombats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>SiegeCombat Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>