force-app/main/default/objects/SiegeCombat__c/fields/Attacker__c.field-meta.xml
<CustomField>
    <fullName>Attacker__c</fullName>
    <label>Attacker</label>
    <type>Lookup</type>
    <referenceTo>Attacker__c</referenceTo>
    <relationshipName>SiegeCombat_Attacker</relationshipName>
</CustomField>