force-app/main/default/objects/SiegeCombat__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <label>Day</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>