force-app/main/default/objects/SiegeCombat__c/fields/Defender__c.field-meta.xml
<CustomField>
    <fullName>Defender__c</fullName>
    <label>Defender</label>
    <type>Lookup</type>
    <referenceTo>Defender__c</referenceTo>
    <relationshipName>SiegeCombat_Defender</relationshipName>
</CustomField>