force-app/main/default/objects/SiegeCombat__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>